* multimedia comprueba el tipo y si existe el archivo * agregue el gdato y coloque bien el jtabbedpane del editor

--- a/Proyecto1/src/proyecto1/ExtremeEditor.form
+++ b/Proyecto1/src/proyecto1/ExtremeEditor.form
@@ -145,7 +145,7 @@
                       <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane1" max="32767" attributes="0"/>
-                  <Component id="files" alignment="0" max="32767" attributes="0"/>
+                  <Component id="files" alignment="0" pref="879" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="79" max="32767" attributes="0"/>
           </Group>
@@ -235,9 +235,9 @@
                   <Component id="btnGuardarComo" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
                   <Component id="btnRun" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
